# Stylization

./: .gitignore  README.md
Nymph/: Nymph.pro  paths.pri
Nymph/NymphCore/: NymphCore.pro  nymphalgorithm.cpp  nymphalgorithm.h  nymphcore.cpp  nymphcore.h  nymphcore_export.cpp  nymphcore_export.h  nymphcore_global.h  nymphcvbase.cpp  nymphcvbase.h  nymphenergy.cpp  nymphenergy.h  nymphmanager.cpp  nymphmanager.h  nymphpatchmatch.cpp  nymphpatchmatch.h
Nymph/NymphGUI/: NymphGUI.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  nympheditor.cpp  nympheditor.h  nymphgui_global.cpp  nymphgui_global.h  nymphrunner.cpp  nymphrunner.h  nymphsingleviewer.cpp  nymphsingleviewer.h  nymphviewer.cpp  nymphviewer.h  nymphviewer.ui  resultwindow.cpp  resultwindow.h  resultwindow.ui
Nymph/NymphLua/: NymphLua.pro  nymphimagemanager.cpp  nymphimagemanager.h  nymphlua.cpp  nymphlua.h  nymphlua_ext.cpp  nymphlua_ext.h  nymphlua_global.h
NymphWorkdir/WorkDir/: nymph.nl  nymph2.nl  nymph3.nl  patch_synthesizer.nl  point_synthesizer.nl  resolve.nl
NymphWorkdir/WorkDir/algorithm/: config.lua  energy.lua  entry.nl  gaussian.lua  mostmatch.lua  patchmatch.lua  patchmatch_ir.nl  ploader.lua  ptable.lua  resolve.nl  synthesizer.lua  synthesizer2.lua  utils.lua
NymphWorkdir/WorkDir/algorithm3/: energy.lua  mat2table.lua  matcher.lua  synthesizer.lua
NymphWorkdir/WorkDir/mod/: color.lua  progress.lua  recorder.lua
NymphWorkdir/WorkDir/tests/: ANN.nl  ANN_debug.nl  copymat.nl  cprint.nl  different_seeds.nl  (+5 more)
PaintTweenDistro/: CMakeLists.txt  README.md  README.txt
PaintTweenDistro/src/: paths.pri
PaintTweenDistro/src/PaintTweenGUI/: CMakeLists.txt  PaintTweenGUI.pro  main.cpp  nlClog.cpp  nlClog.h  nlDialsAndKnobs.cpp  nlGLWidget.h  nlImageContainer.cpp  nlMainWindow.cpp  nlMainWindow.cpp.bak  nlMainWindow.h.bak  nlStyles.cpp  nlSynthesizer.cpp
(+18 files in other folders)
